--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
      <title>Eren (@WH0907)</title>
      <link rel="stylesheet" href="src/style.css">
-     <link rel="icon" href="https://vectorified.com/images/attack-on-titan-icon-31.png" type="image/x-icon">
+     <link rel="icon" href="https://i.ibb.co/w7nHj9Z/IMG-20240918-WA0010.jpg" type="image/x-icon">
      <link rel='stylesheet' href="https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Poppins:wght@100;200;300;400;500;600;700&display=swap">
      <script src="https://kit.fontawesome.com/a81368914c.js"></script>
      <meta charset="UTF-8">
