--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
      <meta name="description" content="Eren's Website | One of the first web development projects by Eren.">
      <meta itemprop="name" content="Eren's Website">
      <meta itemprop="description" content="Eren's Website | One of the first web development projects by Eren.">
-     <meta itemprop="image" content="https://oshi.at/ScAK/ErenPFP.png">
+     <meta itemprop="image" content="https://i.ibb.co/dKhLNnZ/pexels-tapos-roy-arjun-522592665-16354650.jpg">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <meta content="Eren's Website" property="og:site_name">
      <meta property="og:type" content="website">
      <meta content="https://linuxguy312.github.io/" property="og:url">
      <meta content="Eren (@WH0907)" property="og:title">
-     <meta content="https://oshi.at/ScAK/ErenPFP.png" property="og:image">
+     <meta content="https://i.ibb.co/dKhLNnZ/pexels-tapos-roy-arjun-522592665-16354650.jpg" property="og:image">
      <meta content="Eren's Website | One of the first web development projects by Eren." property="og:description">
 </head>
 
