--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
      </div>
 
      <div class="modal">
-          <img src="https://oshi.at/gBdz/WH.png" alt="Eren">
+          <img src="https://i.ibb.co/dKhLNnZ/pexels-tapos-roy-arjun-522592665-16354650.jpg" alt="Eren">
           <div class="close"></div>
      </div>
 
